source/grammar/tests/invalid/statements/loop.qasm
for int myvar in { 1, 2, 3 };
for int myvar1, myvar2 in { 1, 2, 3 } { x $0; }
for int myvar in { x $0; } { x $0; }
for int myvar in for { x $0; }
for int  myvar { x $0; }
for (true) { x $0; }
for { x $0; }
for for in { 1, 2, 3 } { x $0; }
for in { 1, 2, 3 } { x $0; }
while true { x $0; }
while (true) (true) { x $0; }
while x in { 1, 2, 3 } { x $0; }
while (true);
